# faostat-mcp

./: .env.example  .gitignore  LICENSE  README.md  mcp_config_example.json  pyproject.toml
faostat_mcp/: __init__.py  client.py  server.py
tests/: test_prod_api.py  test_unit.py
