[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faostat-mcp"
version = "0.1.0"
description = "MCP server exposing the full FAOSTAT API to AI assistants"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.scripts]
faostat-mcp = "faostat_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["faostat_mcp*"]
